# squashfs-fuse

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: build.yml
doc/: debug.md  design.md  logging.md  performance.md  plan.md  testing.md  testing_results.md
scripts/: create_perf_images.sh
src/: compressor.c  compressor.h  context.h  data.c  data.h  directory.c  directory.h  fragment.c  fragment.h  inode.c  inode.h  log.c  log.h  main.c  stats.c  superblock.c  superblock.h  xattr.c  xattr.h
src/core/: cache.c  cache.h  context.h  data.h  directory.c  directory.h  fragment.h  inode.c  inode.h  stats.h  utils.c  utils.h  xattr.h
src/fuse/: fuse_main.c  vfs_fuse.c
src/kernel/: vfs_kernel.c
src/vfs/: vfs.h  vfs_ops.c
tests/fixtures/: basic.sqfs  create_test_images.sh
tests/functional/: test_basic.sh  test_block_sizes.sh  test_deep_directories.sh  test_error_paths.sh  test_export_table.sh  test_hardlinks.sh  test_large_files.sh  test_long_filenames.sh  test_read.py  test_sparse_files.sh  test_special_chars.sh  test_special_files.sh  test_xattr.sh  test_zstd_compression.sh
tests/performance/: benchmark_lib.sh  benchmark_read.sh  run_benchmark.sh
tests/performance/fio_configs/: concurrent_read.fio  random_read.fio  sequential_read.fio
tests/unit/: test_cache.c  test_compressor.c  test_directory.c  test_export.c  test_fragment.c  test_inode.c  test_metadata.c  test_superblock.c  test_utils.c
